// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<Default__StyledSpan>
  <Toolbar.Collapse
    className=""
    direction="column"
    icon="bars"
    key=".0"
    onClick={null}
    onClose={null}
    onOpen={null}
    opened={false}
    position="left-top"
    shape=""
    size=""
  >
    <div />
  </Toolbar.Collapse>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with the direction and position prop 1`] = `
<Default__StyledSpan>
  <Toolbar.Collapse
    className=""
    direction="row"
    icon="bars"
    key=".0"
    onClick={null}
    onClose={null}
    onOpen={null}
    opened={false}
    position="right-top"
    shape=""
    size=""
  >
    <div />
  </Toolbar.Collapse>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with the direction prop 1`] = `
<Default__StyledSpan>
  <Toolbar.Collapse
    className=""
    direction="column"
    icon="bars"
    key=".0"
    onClick={null}
    onClose={null}
    onOpen={null}
    opened={false}
    position="left-top"
    shape=""
    size=""
  >
    <div />
  </Toolbar.Collapse>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with the opened prop 1`] = `
<Default__StyledSpan>
  <Toolbar.Collapse
    className=""
    direction="column"
    icon="bars"
    key=".0"
    onClick={null}
    onClose={null}
    onOpen={null}
    opened={true}
    position="left-top"
    shape=""
    size=""
  >
    <div />
  </Toolbar.Collapse>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with the shape prop 1`] = `
<Default__StyledSpan>
  <Toolbar.Collapse
    className=""
    direction="column"
    icon="bars"
    key=".0"
    onClick={null}
    onClose={null}
    onOpen={null}
    opened={false}
    position="left-top"
    shape="square"
    size=""
  >
    <div />
  </Toolbar.Collapse>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with the size prop 1`] = `
<Default__StyledSpan>
  <Toolbar.Collapse
    className=""
    direction="column"
    icon="bars"
    key=".0"
    onClick={null}
    onClose={null}
    onOpen={null}
    opened={false}
    position="left-top"
    shape=""
    size="xs"
  >
    <div />
  </Toolbar.Collapse>
</Default__StyledSpan>
`;
